Improve default tool call builder implementations